# edge

./: .coveragerc  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml
app/: main.py  test_main.py
controller/: __init__.py  metric_controller.py  metric_controller_interface.py  test_metric_controller.py
model/: device.py  metric.py  test_metric.py
registery/: __init__.py  in_memory_tsdb.py  tsdb_interface.py
service/: __init__.py  metric_service.py  metric_service_interface.py  test_metric_service.py
