[tool.poetry]
name = "edge"
version = "0.1.0"
description = "This repository contains code and instructions for setting up an air quality monitor on a Raspberry Pi using FastAPI, Poetry, and Clean Architecture. The monitor can measure various pollutants and environmental factors and features real-time monitoring."
authors = ["Mouse"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.94.0"
uvicorn = "^0.21.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.1.1"
black = "^23.1.0"
pytest = "^7.2.2"
pytest-mock = "^3.10.0"
coverage = "^7.2.1"
pytest-xdist = "^3.2.0"
httpx = "^0.23.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
